--- a/project-template.html
+++ b/project-template.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rachel Gillespie - Portfolio</title>
+    <title>Dublin Climbers And Mountaineers</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/bd3a3d372a.js" crossorigin="anonymous"></script>
     <style> @import url('https://fonts.googleapis.com/css2?family=Notable&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap'); </style>
@@ -31,7 +31,7 @@
             </div>
             <div class="hero-content">
                 <div class="content-wrapper">
-                    <h1>Project Title Here</h1> <p class="project-tagline">A brief, impactful tagline for the project.</p>
+                    <h1>Dublin CLimbers and Mountaineers Re-Brand</h1> <p class="project-tagline">A brief, impactful tagline for the project.</p>
                 </div>
             </div>
         </section>
@@ -41,8 +41,9 @@
                 <div class="overview-grid">
                     <div class="overview-description">
                         <h2>Project Overview</h2>
-                        <p>This section will describe the project in detail. What was the client's problem or goal? What was the scope of the project? What was your role in it? Provide context for the design challenge.</p>
-                        <p>You can add multiple paragraphs to fully explain the background, objectives, and your specific contributions to the project. Emphasize the impact of your work.</p>
+                        <p>I was asked to choose an existing visual brand identity that needs re-designing. I chose Dublin Climbers And Mountaineers</p>
+                        <p>As part of this, I created a 'Brand Design Strategy' to be applied throughout the design process.</p>
+                        <p>This strategy was used as a touchstone element throughout the design process to keep me, (the designer) on the correct path</p>
                         <a href="#" class="button button-dark" target="_blank">View Live Site/Prototype</a> </div>
                     <div class="overview-details">
                         <h3>Project Details</h3>
