--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rachel Gillespie - Portfolio</title>
+    <title>Resume</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/bd3a3d372a.js" crossorigin="anonymous"></script>
     <style> @import url('https://fonts.googleapis.com/css2?family=Notable&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap'); </style>
