--- a/project-template.html
+++ b/project-template.html
@@ -31,7 +31,7 @@
             </div>
             <div class="hero-content">
                 <div class="content-wrapper">
-                    <h1>Dublin CLimbers and Mountaineers Re-Brand</h1> <p class="project-tagline">A brief, impactful tagline for the project.</p>
+                    <h1>Dublin CLimbers And Mountaineers Brand Re-Design</h1> <p class="project-tagline">A brief, impactful tagline for the project.</p>
                 </div>
             </div>
         </section>
@@ -50,7 +50,7 @@
                         <p><strong>Role:</strong> UI/UX Designer, Web Developer</p>
                         <p><strong>Tools:</strong> Figma, Adobe XD, Photoshop, HTML, CSS, JavaScript</p>
                         <p><strong>Timeline:</strong> 3 weeks</p>
-                        <p><strong>Client:</strong> Fictional Client Name</p>
+                        <p><strong>Client:</strong>Dublin Climbers And Mountaineers</p>
                     </div>
                 </div>
             </div>
