--- a/resume.html
+++ b/resume.html
@@ -47,17 +47,17 @@
                         <h3>Skills</h3>
                         <h4>Computer Skills</h4>
                         <ul>
-                            <li>Adobe - Illustrator, InDesign, Photoshop, Premier Pro, XD [cite: 8]</li>
-                            <li>Web Languages (VS Code, Brackets, GitHub) - HTML, CSS, JavaScript, PHP, MySQL [cite: 8]</li>
-                            <li>UI Design - Figma, Balsamiq [cite: 8]</li>
+                            <li>Adobe - Illustrator, InDesign, Photoshop, Premier Pro, XD</li>
+                            <li>Web Languages (VS Code, Brackets, GitHub) - HTML, CSS, JavaScript, PHP, MySQL</li>
+                            <li>UI Design - Figma, Balsamiq</li>
                         </ul>
                         <h4>Key Skills</h4>
                         <ul>
-                            <li>Creative problem-solving [cite: 3]</li>
-                            <li>Web design and development [cite: 3]</li>
-                            <li>Project management [cite: 3]</li>
-                            <li>Presentation skills [cite: 3]</li>
-                            <li>Teamwork [cite: 3]</li>
+                            <li>Creative Problem-Solving</li>
+                            <li>Web Design and Development</li>
+                            <li>Project Management</li>
+                            <li>Presentation Skills]</li>
+                            <li>Teamwork</li>
                         </ul>
                     </div>
 
@@ -65,11 +65,11 @@
                         <h3>Additional Information</h3>
                         <div class="resume-item no-bullets">
                             <h3>UCD Professional Academy <span class="job-company">Professional Diploma in Graphic Design</span></h3>
-                            <p class="job-duration">August 2022 [cite: 8]</p>
+                            <p class="job-duration">August 2022</p>
                         </div>
                         <div class="resume-item no-bullets">
                             <h3>Gaisce - The President's Award <span class="job-company">Bronze Award</span></h3>
-                            <p class="job-duration">May 2016 [cite: 9]</p>
+                            <p class="job-duration">May 2016</p>
                         </div>
                     </div>
                 </div>
@@ -77,30 +77,30 @@
                 <div class="resume-main-content">
                     <section class="summary-section">
                         <h2>Profile</h2>
-                        <p>I am currently enrolled in a BA (Hons) program in Visual Communications and Design at South East Technological University. [cite: 1] Achieved a BTEC Level 3 in Creative Media Production and a Professional Diploma in Graphic Design. [cite: 2]</p>
+                        <p>I am currently enrolled in a BA (Hons) program in Visual Communications and Design at South East Technological University. [cite: 1] Achieved a BTEC Level 3 in Creative Media Production and a Professional Diploma in Graphic Design.</p>
                     </section>
 
                     <section class="experience-section">
                         <h2>Work Experience</h2>
                         <div class="resume-item">
                             <h3>Freelance Designer <span class="job-company"></span></h3>
-                            <p class="job-duration">September 2022-Present [cite: 7]</p>
+                            <p class="job-duration">September 2022-Present</p>
                             </div>
                         <div class="resume-item">
                             <h3>Visual Communications and Design Class Representative <span class="job-company">SETU, Wexford</span></h3>
-                            <p class="job-duration">November 2022-June 2024 [cite: 7]</p>
+                            <p class="job-duration">November 2022-June 2024</p>
                             </div>
                         <div class="resume-item">
                             <h3>Customer Assistant (Festive) <span class="job-company">Tesco, Wexford</span></h3>
-                            <p class="job-duration">December 2023 [cite: 7]</p>
+                            <p class="job-duration">December 2023</p>
                         </div>
                         <div class="resume-item">
                             <h3>Cashier and Sales Assistant <span class="job-company">SuperValu, Hacketstown, Co. Carlow</span></h3>
-                            <p class="job-duration">August 2020-August 2022 [cite: 7]</p>
+                            <p class="job-duration">August 2020-August 2022</p>
                         </div>
                         <div class="resume-item">
                             <h3>Work Experience <span class="job-company">KCLR 96FM, Kilkenny</span></h3>
-                            <p class="job-duration">August 2018 [cite: 8]</p>
+                            <p class="job-duration">August 2018</p>
                         </div>
                     </section>
 
@@ -108,26 +108,26 @@
                         <h2>Education</h2>
                         <div class="resume-item">
                             <h3>BA (Hons) in Visual Communications and Design <span class="job-company">South East Technological University</span></h3>
-                            <p class="job-duration">2022-2025 [cite: 4]</p>
+                            <p class="job-duration">2022-2025</p>
                             <ul>
-                                <li>Current modules: Creative Studio, Information Design, Marketing Management, Professional Design Practice, Socially Engaged Practice, User Interface and Experience Design and Web Development. [cite: 4]</li>
-                                <li>Year 2 modules: Art History, Creative Studio, Design Print Production, Introduction to Marketing, Marketing Mix, Media and Communications, Web Design Methods. [cite: 5]</li>
-                                <li>Year 1 modules: Art History, Digital Media Design, Photography and Video, Visual Studies: Colour, Drawing, 3d, Notebook Research, Skills-based Workshops and Themed Project. [cite: 6]</li>
+                                <li>Current modules: Creative Studio, Information Design, Marketing Management, Professional Design Practice, Socially Engaged Practice, User Interface and Experience Design and Web Development.</li>
+                                <li>Year 2 modules: Art History, Creative Studio, Design Print Production, Introduction to Marketing, Marketing Mix, Media and Communications, Web Design Methods.</li>
+                                <li>Year 1 modules: Art History, Digital Media Design, Photography and Video, Visual Studies: Colour, Drawing, 3d, Notebook Research, Skills-based Workshops and Themed Project.</li>
                             </ul>
                         </div>
                         <div class="resume-item">
                             <h3>BTEC Level 3 Diploma in Creative Media Production <span class="job-company">Ballyfermot College of Further Education</span></h3>
-                            <p class="job-duration">2018-2019 [cite: 7]</p>
+                            <p class="job-duration">2018-2019</p>
                         </div>
                         <div class="resume-item">
                             <h3>Professional Diploma in Graphic Design <span class="job-company">UCD Professional Academy</span></h3>
-                            <p class="job-duration">August 2022 [cite: 8]</p>
+                            <p class="job-duration">August 2022</p>
                             </div>
                     </section>
 
                     <section class="referees-section">
                         <h2>Referees</h2>
-                        <p>Available upon request. [cite: 9]</p>
+                        <p>Available upon request.</p>
                     </section>
                 </div>
             </div>
