--- a/resume.html
+++ b/resume.html
@@ -35,11 +35,11 @@
                 <div class="resume-sidebar">
                     <div class="contact-info">
                         <h3>Contact</h3>
-                        <p><i class="fas fa-envelope"></i> gillespierachel74@gmail.com [cite: 1]</p>
-                        <p><i class="fas fa-phone"></i> 087 910 1235 [cite: 1]</p>
+                        <p><i class="fas fa-envelope"></i> gillespierachel74@gmail.com</p>
+                        <p><i class="fas fa-phone"></i> 087 910 1235</p>
                         <p><i class="fas fa-map-marker-alt"></i> Dublin, Ireland</p>
                         <div class="resume-social-links">
-                            <a href="www.linkedin.com/in/rachelgillespie" target="_blank" aria-label="LinkedIn Profile"><i class="fab fa-linkedin"></i> LinkedIn [cite: 1]</a>
+                            <a href="www.linkedin.com/in/rachelgillespie" target="_blank" aria-label="LinkedIn Profile"><i class="fab fa-linkedin"></i> LinkedIn</a>
                             </div>
                     </div>
 
@@ -84,23 +84,15 @@
                         <h2>Work Experience</h2>
                         <div class="resume-item">
                             <h3>Freelance Designer <span class="job-company"></span></h3>
-                            <p class="job-duration">September 2022-Present</p>
+                            <p class="job-duration">September 2022-2025</p>
                             </div>
                         <div class="resume-item">
                             <h3>Visual Communications and Design Class Representative <span class="job-company">SETU, Wexford</span></h3>
                             <p class="job-duration">November 2022-June 2024</p>
                             </div>
                         <div class="resume-item">
-                            <h3>Customer Assistant (Festive) <span class="job-company">Tesco, Wexford</span></h3>
-                            <p class="job-duration">December 2023</p>
-                        </div>
-                        <div class="resume-item">
                             <h3>Cashier and Sales Assistant <span class="job-company">SuperValu, Hacketstown, Co. Carlow</span></h3>
                             <p class="job-duration">August 2020-August 2022</p>
-                        </div>
-                        <div class="resume-item">
-                            <h3>Work Experience <span class="job-company">KCLR 96FM, Kilkenny</span></h3>
-                            <p class="job-duration">August 2018</p>
                         </div>
                     </section>
 
@@ -110,7 +102,7 @@
                             <h3>BA (Hons) in Visual Communications and Design <span class="job-company">South East Technological University</span></h3>
                             <p class="job-duration">2022-2025</p>
                             <ul>
-                                <li>Current modules: Creative Studio, Information Design, Marketing Management, Professional Design Practice, Socially Engaged Practice, User Interface and Experience Design and Web Development.</li>
+                                <li>Year 3 modules: Creative Studio, Information Design, Marketing Management, Professional Design Practice, Socially Engaged Practice, User Interface and Experience Design and Web Development.</li>
                                 <li>Year 2 modules: Art History, Creative Studio, Design Print Production, Introduction to Marketing, Marketing Mix, Media and Communications, Web Design Methods.</li>
                                 <li>Year 1 modules: Art History, Digital Media Design, Photography and Video, Visual Studies: Colour, Drawing, 3d, Notebook Research, Skills-based Workshops and Themed Project.</li>
                             </ul>
@@ -143,11 +135,7 @@
     <a href="https://www.linkedin.com/in/rachelgillespie/" target="_blank" aria-label="LinkedIn Profile">
         <i class="fab fa-linkedin"></i> </a>
         <a href="https://github.com/rachel-gillespie" target="_blank" aria-label="GitHub Profile">
-                <i class="fab fa-github"></i>
-            </a>
-            <a href="https://www.instagram.com/rachelg.design/" target="_blank" aria-label="Instagram Profile">
-                <i class="fab fa-instagram"></i>
-            </a>
+                <i class="fab fa-github"></i></a>
             <a href="https://www.flickr.com/photos/202202748@N03/" target="_blank" aria-label="Flickr Profile">
                 <i class="fab fa-flickr"></i>
             </a>
