--- a/project-template.html
+++ b/project-template.html
@@ -112,11 +112,7 @@
     <a href="https://www.linkedin.com/in/rachelgillespie/" target="_blank" aria-label="LinkedIn Profile">
         <i class="fab fa-linkedin"></i> </a>
         <a href="https://github.com/rachel-gillespie" target="_blank" aria-label="GitHub Profile">
-                <i class="fab fa-github"></i>
-            </a>
-            <a href="https://www.instagram.com/rachelg.design/" target="_blank" aria-label="Instagram Profile">
-                <i class="fab fa-instagram"></i>
-            </a>
+                <i class="fab fa-github"></i></a>
             <a href="https://www.flickr.com/photos/202202748@N03/" target="_blank" aria-label="Flickr Profile">
                 <i class="fab fa-flickr"></i>
             </a>
