--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,6 @@
                     <div class="contact-social-links">
                         <a href="www.linkedin.com/in/rachelgillespie" target="_blank" aria-label="LinkedIn Profile"><i class="fab fa-linkedin"></i> LinkedIn</a>
                         <a href="https://github.com/rachel-gillespie" target="_blank" aria-label="GitHub Profile"><i class="fab fa-github"></i> GitHub</a>
-                        <a href="https://www.instagram.com/rachelg.design/" target="_blank" aria-label="Instagram Profile"><i class="fab fa-instagram"></i> Instagram</a>
                         <a href="https://www.flickr.com/photos/202202748@N03/" target="_blank" aria-label="Flickr Profile"><i class="fab fa-flickr"></i> Flickr</a>
                         </div>
                 </div>
@@ -67,11 +66,7 @@
         <a href="https://www.linkedin.com/in/rachelgillespie/" target="_blank" aria-label="LinkedIn Profile">
             <i class="fab fa-linkedin"></i> </a>
             <a href="https://github.com/rachel-gillespie" target="_blank" aria-label="GitHub Profile">
-                    <i class="fab fa-github"></i>
-                </a>
-                <a href="https://www.instagram.com/rachelg.design/" target="_blank" aria-label="Instagram Profile">
-                    <i class="fab fa-instagram"></i>
-                </a>
+                    <i class="fab fa-github"></i></a>
                 <a href="https://www.flickr.com/photos/202202748@N03/" target="_blank" aria-label="Flickr Profile">
                     <i class="fab fa-flickr"></i>
                 </a>
